* Compatibility fix: check if generated HTML for report includes a <form> tag,
  and add it if not present. Required for compatibility with very old Elastix
  versions.
* Agents: use <button> tag to make link appear as a button.
* Campaigns Out: check that multibyte functions exist before trying to use them.
  Fixes Elastix bug #650.
* Calls Detail: complete rewrite. Reorganized library methods now use SQL query
  parameters, have more readable code and a cleaner API, allows simultaneous
  filtering by more criteria, no longer requires fetching of all records to find
  the total number, and fixes several design flaws. Reorganized interface 
  replaces the filtering by up to two criteria with a four-criteria filter with
  drop-down lists for Call Type, Agent, Queues. Should also contain fix for 
  Elastix bug #638.
* Reports Break, Calls Detail, Calls per Agent, Hold Time, Login Logout: do not
  add HTML tags on non-HTML exports when using production versions of Elastix
  framework 2.0.
* Break Administrator: use parametrized SQL queries instead of string 
  concatenation. Remove uses of construirInsert and construirUpdate. Make code
  smaller and add additional parameter validation. Remove unneeded AJAX calls.
  Expose functionality to activate/deactivate breaks in break listing. Use POST
  actions exclusively for modifications.

1.5-3.9 (SVN revision 2086)
* Reports: fix regression introduced by testing existence of incorrect method in
  Elastix 2.

1.5-3.8 (SVN revision 2084)
* Dialer (phpagi-asmanager): fix broken database_get method
* Hold Time, Login Logout: remove unused HTML templates 
* Break Administrator: remove dead code.
* CallCenter Config, Agent Console, Agents, Break Administrator, Calls Detail, 
  Calls per Agent, Calls per Hour, Campaign Out, Ingoing Calls Success, 
  Login Logout, Agent Information, Agents Connection Time, Trunks Used per Hour,
  Hold Time: Use methods load_language_module and _tr from Elastix framework. 