@@ -1,3 +1,4 @@
+* Break Administrator: fix warning on array_fill() when no breaks are defined.
 * Compatibility fix: check if generated HTML for report includes a <form> tag,
   and add it if not present. Required for compatibility with very old Elastix
   versions.
